# langchain-azure

./: .dockerignore  .editorconfig  .env.example  .gitignore  AUTOLOG_IMPLEMENTATION_GUIDE.md  Agents.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTEGRATION_PLAN.md  Knowledge.md  PHASE1_IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  maintainers.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml
.github/agents/: langchain-azure.agent.md
.github/scripts/: check_diff.py  update_docs.py
.github/workflows/: _azure_cosmosdb_ci.yml  _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  azure_cosmosdb_release.yml  check_diffs.yml  issue-triage.yml  update_docs.yml
libs/: azure-storage.md
libs/azure-ai/: .env.example  .gitignore  (+4 more)
libs/azure-cosmosdb/: Makefile  README.md  pyproject.toml
libs/azure-cosmosdb/src/: __init__.py
libs/azure-cosmosdb/src/langchain_azure_cosmosdb/: __init__.py  _cache.py  _chat_history.py  _langgraph_cache.py  _langgraph_checkpoint_store.py  _langgraph_store.py  _query_constructor.py  _utils.py  _vectorstore.py
libs/azure-cosmosdb/src/langchain_azure_cosmosdb/aio/: _cache.py  _chat_history.py  _langgraph_cache.py  _langgraph_checkpoint_store.py  _langgraph_store.py  _vectorstore.py
libs/azure-cosmosdb/src/langchain_azure_cosmosdb/langchain/: __init__.py  _cache.py  _chat_history.py  _query_constructor.py  _vectorstore.py
libs/azure-cosmosdb/src/langchain_azure_cosmosdb/langchain/aio/: __init__.py  _cache.py  _chat_history.py  _vectorstore.py
libs/azure-cosmosdb/src/langchain_azure_cosmosdb/langgraph/: __init__.py  _cache.py  _checkpoint_store.py
libs/azure-cosmosdb/src/langchain_azure_cosmosdb/langgraph/aio/: __init__.py  _cache.py  _checkpoint_store.py
libs/azure-cosmosdb/tests/: embed_test_utils.py
libs/azure-cosmosdb/tests/integration_tests/: test_cache.py  test_chat_history.py  test_langgraph_cache.py  test_langgraph_checkpointer.py  test_langgraph_store.py  test_vectorstore.py
libs/azure-cosmosdb/tests/integration_tests/aio/: test_cache.py  test_langgraph_store.py  test_vectorstore.py
libs/azure-cosmosdb/tests/integration_tests/langchain/: test_async_cache.py  test_cache.py
libs/azure-cosmosdb/tests/integration_tests/langgraph/: test_async_cache.py  test_cache.py  test_checkpointer.py
libs/azure-cosmosdb/tests/unit_tests/: _delta_common.py  test_cache.py  test_chat_history.py  test_checkpoint_server_side_queries.py  test_langgraph_cache_keys.py  test_langgraph_checkpoint_delta.py  test_langgraph_checkpoint_keys.py  test_query_constructor.py  test_resilience.py  test_utils.py  test_vectorstore.py
libs/azure-cosmosdb/tests/unit_tests/aio/: test_cache.py  test_chat_history.py  test_langgraph_checkpoint_delta.py  test_vectorstore.py
libs/azure-cosmosdb/tests/unit_tests/langchain/: test_async_cache.py  test_async_chat_history.py  test_async_vectorstore.py  test_cache.py  test_query_constructor.py  test_utils.py  test_vectorstore.py
libs/azure-cosmosdb/tests/unit_tests/langgraph/: test_async_cache.py  test_cache_keys.py  test_checkpoint_keys.py
libs/azure-postgresql/: Makefile  pyproject.toml
libs/azure-postgresql/src/langchain_azure_postgresql/common/: _shared.py
libs/azure-postgresql/src/langchain_azure_postgresql/langchain/: _shared.py  _vectorstore.py
libs/azure-postgresql/src/langchain_azure_postgresql/langchain/aio/: _vectorstore.py
libs/azure-postgresql/tests/: conftest.py
libs/azure-postgresql/tests/common/: test_connection.py
libs/azure-postgresql/tests/langchain/: conftest.py  test_vectorstore.py
libs/azure-storage/: .coverage  .gitignore  Makefile  README.md  pyproject.toml
libs/azure-storage/demos/document_loaders/: README.md  demo.py  embed.py  requirements.txt
libs/azure-storage/langchain_azure_storage/: __init__.py  __version__.py  _table_utils.py  _user_agent.py  azure_blob_storage_container.py  azure_blob_storage_file.py  checkpointer.py  document_loaders.py
libs/azure-storage/langchain_azure_storage/_deepagents/: __init__.py  backend.py
libs/azure-storage/langchain_azure_storage/deepagents/: __init__.py  _utils.py  backend.py  config.py
libs/azure-storage/langchain_azure_storage/document_loaders/: __init__.py  base.py  unstructured.py
libs/azure-storage/proposals/: deepagents_backend.md  document_loaders.md
libs/azure-storage/samples/: README.md  basic_agent.py  composite_with_memories.py  resume_workspace.py
libs/azure-storage/tests/: conftest.py  utils.py
libs/azure-storage/tests/integration_tests/: conftest.py  test_deepagents_backend.py  test_deepagents_backend_contract.py  test_document_loaders.py
libs/azure-storage/tests/unit_tests/: test_checkpointer.py  test_deepagents_backend.py  test_document_loaders.py  test_table_utils.py
libs/azure-storage/tests/unit_tests/deepagents/: conftest.py  test_backend.py  test_utils.py
libs/azure-storage/tests/unit_tests/deepagents/backend/: test_edit.py  test_glob.py  test_grep.py  test_lifecycle.py  test_ls.py  test_read.py  test_upload_download.py  test_write.py
samples/hosting/langgraph-hosted-agents/responses/99_resilient/: .agentignore  .dockerignore  .gitignore  README.md  agent.manifest.yaml  agent.yaml  azure.yaml  client.py  deploy.ps1  main.py  model.py  pyproject.toml  requirements.txt
samples/hosting/langgraph-hosted-agents/responses/99_resilient/client/: app.py  client.py  conversation.py  pyproject.toml
samples/hosting/langgraph-hosted-agents/responses/99_resilient/client/tests/: test_app.py  test_conversation.py  test_cui.py
samples/langchain-azure-ai/react-agent/: langgraph.json  pyproject.toml
samples/langchain-azure-ai/react-agent/src/react_agent/: graph.py  prompts.py  workflow.py
samples/react-agent-docintelligence/: Makefile  README.md  example_usage.py  pyproject.toml
samples/react-agent-docintelligence/src/react_agent/: graph.py
(+378 files in other folders)
