[project]
name = "langchain-azure-storage"
version = "1.0.1"
description = "LangChain integrations for Azure Storage"
authors = [
    {name="Microsoft Corporation", email="ascl@microsoft.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.10"
keywords = ["langchain", "azure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "azure-core>=1.38.0",
    "azure-identity~=1.25",
    "azure-storage-blob[aio]~=12.26",
    "langchain-core>=1.2.5,<2.0",
]

[project.optional-dependencies]
# Azure Blob Storage filesystem backend for LangChain Deep Agents. deepagents
# requires Python >= 3.11, so the extra is gated by an environment marker: on
# Python 3.10 it resolves to nothing (the document loaders still work), while
# `pip install langchain-azure-storage[deepagents]` pulls the backend deps on
# 3.11+.
deepagents = [
    "deepagents>=0.6.12,<1; python_version>='3.11'",
    "wcmatch>=10.1; python_version>='3.11'",
]

[project.urls]
repository = "https://github.com/langchain-ai/langchain-azure"
"Source Code" = "https://github.com/langchain-ai/langchain-azure/tree/main/libs/azure-storage"
"Release Notes" = "https://github.com/langchain-ai/langchain-azure/releases"

[build-system]
requires = ["uv_build>=0.8,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.codespell]
# "als" is the Deep Agents BackendProtocol async-ls method name, not a typo.
ignore-words-list = "als"

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
disallow_untyped_defs = true

# deepagents and wcmatch are only installed via the [deepagents] extra on
# Python >= 3.11. On the 3.10 lint job they are absent, and deepagents ships no
# type stubs, so treat them as untyped rather than failing on missing imports.
[[tool.mypy.overrides]]
module = ["deepagents.*", "wcmatch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "--durations=5"]
markers = [
    "requires: mark tests as requiring a specific library",
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
constraint-dependencies = ["urllib3>=2.6.3", "cryptography>=46.0.7", "aiohttp>=3.13.4", "pyjwt>=2.12.0"]
default-groups = ["typing"]

[dependency-groups]
codespell = ["codespell~=2.2"]
dev = ["langchain-core"]
lint = ["ruff>=0.5,<0.16", "pytest>=9.0.3,<10"]
test = ["pytest>=9.0.3,<10", "pytest-asyncio>=1.0,<2"]
test_integration = ["pytest>=9.0.3,<10"]
typing = ["mypy>=1.10,<3.0"]
