[project]
name = "99-resilient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-agentserver-core",
    "azure-ai-agentserver-responses",
    "azure-ai-projects>=2.3.0",
    "azure-identity>=1.25.1",
    "langchain-azure-ai[opentelemetry]>=1.2.8",
    "langchain-openai>=1.1.11",
    "langgraph>=1.2.8",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "opentelemetry-exporter-otlp-proto-http>=1.37",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
azure-ai-agentserver-core = { git = "https://github.com/Azure/azure-sdk-for-python.git", subdirectory = "sdk/agentserver/azure-ai-agentserver-core", rev = "19a0cd609bf7ce66b25886dc9a8439c31c07210d" }
azure-ai-agentserver-responses = { git = "https://github.com/Azure/azure-sdk-for-python.git", subdirectory = "sdk/agentserver/azure-ai-agentserver-responses", rev = "19a0cd609bf7ce66b25886dc9a8439c31c07210d" }
